Add initial support for Java 14 language features
-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=303367644